force-app/main/default/objects/LLC_BI__Reconciliation_Service__c/LLC_BI__Reconciliation_Service__c.object-meta.xml
<CustomObject>
    <description>This object stores records that allow financial institutions to ensure the timeliness of deposits matches what is stored in the treasury service.</description>
    <label>Reconciliation Service</label>
    <nameField>
        <displayFormat>RS-{000000000}</displayFormat>
        <label>Reconciliation Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliation Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>