force-app/main/default/objects/LLC_BI__Reconciliation_Service__c/fields/LLC_BI__Account_Recon_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_Recon_Plan_Type__c</fullName>
    <label>Account Recon Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>