force-app/main/default/objects/LLC_BI__Reconciliation_Service__c/fields/LLC_BI__Other_Reconciliation_Cycle_Explanation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Other_Reconciliation_Cycle_Explanation__c</fullName>
    <description>Please explain why you choose other for Reconciliation Type.</description>
    <inlineHelpText>Please explain why you choose other for Reconciliation Type.</inlineHelpText>
    <label>Other Reconciliation Cycle Explanation</label>
    <type>TextArea</type>
</CustomField>