force-app/main/default/objects/LLC_BI__Reconciliation_Service__c/fields/LLC_BI__Reconciliation_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Reconciliation_Type__c</fullName>
    <label>Reconciliation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>