force-app/main/default/objects/LLC_BI__Reconciliation_Service__c/fields/LLC_BI__Treasury_Service_Reference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treasury Service Reference</label>
    <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
    <relationshipLabel>Reconciliation Service</relationshipLabel>
    <relationshipName>Reconciliation_Service</relationshipName>
    <type>Lookup</type>
</CustomField>